# baymol

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: example_precursors.csv  example_predictions.csv  quickstart.py
src/baymol/: __init__.py  db.py  features.py  featurise.py  models.py  predict.py  reactions.py  reactive_sites.py
tests/: test_db.py  test_features.py  test_featurise.py  test_predict.py  test_quickstart.py  test_reactions.py  test_reactive_sites.py
