[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "baymol"
version = "0.1.0"
description = "Tools for synthesis-constrained molecular library generation and molecular feature computation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Filip Aniés" }
]
dependencies = [
    "numpy",
    "rdkit",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
ml = [
    "chemprop",
]

[project.urls]
Homepage = "https://github.com/filipanies/baymol"
Repository = "https://github.com/filipanies/baymol"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
